Completed Carousel, fixed dashboard spacing and dropdown

--- a/src/styles/layout/navbar.module.css
+++ b/src/styles/layout/navbar.module.css
@@ -239,6 +239,10 @@
         height: 48px;
         font-size: 15px;
     }
+
+    .links {
+        display: none;
+    }
 }
 
 @media (min-width: 769px) and (max-width: 870px) {
