--- a/src/styles/pages/home/features.module.css
+++ b/src/styles/pages/home/features.module.css
@@ -8,9 +8,18 @@
 }
 
 .backgroundBox {
+    align-items: center;
     background-color: rgba(0, 0, 0, 0.5);
-    height: 100%;
+    display: flex;
+    gap: 40px;
+    justify-content: space-between;
+    min-height: 800px;
     padding: 60px 80px;
+}
+
+.textContainer {
+    flex: 1;
+    max-width: 700px;
 }
 
 .feature-box{
@@ -53,11 +62,12 @@
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
     background-size: cover;
     background-position: center;
+    min-height: 800px;
 }
 
 .listBoxTitle {
     font-family: 'MyCustomFont', sans-serif;
-    font-size: 40px;
+    font-size: 80px;
 }
 
 .listBodyText {
@@ -80,7 +90,6 @@
     font-size: 26px;
 }
 
-
 @media (max-width: 768px) {
     .listContainerGrid {
         grid-template-columns: 1fr; /* 1 column on mobile */
@@ -91,6 +100,26 @@
         flex-direction: column;
         font-size: 32px;
         text-align: center;
+    }
+    .listBoxTitle {
+        font-size: 50px;
+    }
+
+    .imageContainer {
+        display: none;
+    }
+
+    .carousel {
+        padding: 0px;
+    }
+
+    .backgroundBox {
+        padding: 40px;
+        min-height: 900px;
+    }
+
+    .listBox {
+        min-height: 900px;
     }
 }
 
